# string_calculator

./: README.md  pyproject.toml  requirements.txt  run_calc.py
src/: calculator.py  run_calc.py
tests/: test_string_calc.py
